# architekton

./: CMakeLists.txt  Codestyle.txt  README.md  architekton.architekton.txt  architekton.pro  architekton.sln  architekton.vcxproj  blueprint_loader.c++  blueprint_loaders.c++  commandline.c++  debug.c++  error.c++  external.c++  file.c++  lexer.c++  main.c++  options.c++  project.c++  string.c++  target.c++  types.c++  utility.c++
architekton/: architecture.h++  assert.h++  blueprint_loader.h++  blueprint_loaders.h++  blueprints.h++  commandline.h++  debug.h++  error.h++  external.h++  file.h++  global.h++  lexer.h++  make_unique.h++  options.h++  os.h++  print.h++  project.h++  string.h++  target.h++  toolchain.h++  types.h++  utility.h++
architekton/utility/: commandline.h++  debug.h++  error.h++  file.h++  make_unique.h++  print.h++  string.h++
blueprints/: OSes.blueprint.txt  architectures.blueprint.txt  toolchains.blueprint.txt
utility/: commandline.c++  debug.c++  error.c++  file.c++  string.c++
